Fixed logo alignment on left

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -5,12 +5,12 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    gap: 0 2rem;
 }
 .left-content {
     display: flex;
     align-items: center;
     gap: .75rem;
+    padding-right: 0.75rem;
 }
 .back-contain {
     display: flex;
